file system batch upload enabled also

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -40,7 +40,7 @@
 				<a href="{% url 'map' %}" title="Map">Map</a>
 			</li>
 			<li>
-				<a href="{% url 'xgds_image_upload' %}" title="image">Image</a>
+				<a href="{% url 'xgds_image_upload_page' %}" title="image">Image</a>
 			</li>
 <!-- 			<li { % currentnav *note* edit_user_session % }>
 				<a href="{ % url 'review_notes' % }" title="Notes">Notes</a>
