basic xgds planner added, wedges not yet drawn for gigapans

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -40,6 +40,9 @@
 				<a href="{% url 'map' %}" title="Map">Map</a>
 			</li>
 			<li>
+				<a href="{% url 'planner2_index' %}" title="plan">Plan</a>
+			</li>
+			<li>
 				<a href="{% url 'xgds_image_upload_page' %}" title="image">Image</a>
 			</li>
 <!-- 			<li { % currentnav *note* edit_user_session % }>
