--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -42,13 +42,12 @@
 			<li>
 				<a href="{% url 'planner2_index' %}" title="plan">Plan</a>
 			</li>
-			<!-- 
 			<li>
 				<a href="{% url 'xgds_image_upload_page' %}" title="image">Image</a>
 			</li>
-<!-- 			<li { % currentnav *note* edit_user_session % }>
-				<a href="{ % url 'review_notes' % }" title="Notes">Notes</a>
-			</li> -->
+ 			<li { % currentnav *note* % }>
+				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
+			</li>
             <li>
             {% if user.is_authenticated %}
                  <a href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
