--- a/apps/basaltApp/templates/registration/password_reset_email.html
+++ b/apps/basaltApp/templates/registration/password_reset_email.html
@@ -1,14 +1,14 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
-{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at xGDS PLRP.{% endblocktrans %}
+{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account on xGDS.{% endblocktrans %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
+{{ protocol }}://{{ request.META.HTTP_HOST }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
 {% endblock %}
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
 {% trans "Thanks for using our ground data system!" %}
 
-{% blocktrans %}The GDS team{% endblocktrans %}
+{% blocktrans %}The xGDS team{% endblocktrans %}
 
 {% endautoescape %}
