--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -47,6 +47,9 @@
  			<li {% currentnav *note* %}>
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
 			</li>
+			<li {% currentnav *import* %}>
+				<a href="{% url 'xgds_data_import' %}" title="Import">Import</a>
+			</li>
             <li>
             {% if user.is_authenticated %}
                  <a href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
