--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -9,8 +9,10 @@
     {% block title %}{% block siteSection %}{% endblock siteSection%} {% block siteTitle %}BASALT{% endblock siteTitle%}{% endblock title%}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <script src="{{ EXTERNAL_URL }}modernizr/modernizr.js"></script>
+    {% block cssMain %}
     <link rel="stylesheet" type="text/css" href="{% static 'gumby/css/gumby.css' %}">
+    {% endblock cssMain %}
+    
  	{% block cssExtras %}
     {% endblock cssExtras %}
   	{% block headExtras %}
@@ -95,11 +97,13 @@
 	
     
     {% block scripts %}
+    <script src="{{ EXTERNAL_URL }}modernizr/modernizr.js"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
 
 	<!--
 	Include gumby.js followed by UI modules followed by gumby.init.js
 	Or concatenate and minify into a single file -->
+	<!-- 
 	<script gumby-touch="{{ EXTERNAL_URL }}gumby/js/libs" src="{{ EXTERNAL_URL }}gumby/js/libs/gumby.js"></script>
 	<script src="{{ EXTERNAL_URL }}gumby/js/libs/ui/gumby.retina.js"></script>
 	<script src="{{ EXTERNAL_URL }}gumby/js/libs/ui/gumby.fixed.js"></script>
@@ -114,7 +118,7 @@
 
 	<script src="{{ EXTERNAL_URL }}gumby/js/plugins.js"></script>
 	<script src="{{ EXTERNAL_URL }}gumby/js/main.js"></script>
-
+ -->
     {% endblock %}
 
     <script type="text/javascript">
