added infrastructure to create and edit EV; started generic infrastructure to include external plan analyzers

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -101,7 +101,8 @@
 	
     
     {% block scripts %}
-    <script src="{{ EXTERNAL_URL }}modernizr/modernizr.js"></script>
+    <!-- <script src="{{ EXTERNAL_URL }}modernizr/modernizr.js"></script>
+	 -->
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
 
 	<!--
