--- a/apps/basaltApp/templates/basaltApp/editEV.html
+++ b/apps/basaltApp/templates/basaltApp/editEV.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block sitemenu-content-secondary %}
+{% include "xgds_planner2/planner2_subnav.html" %}
+{% endblock %}
 
 {% block content %}
 <h2>Edit EVs</h2>
@@ -6,7 +9,7 @@
 <p>
 <strong>Add EV</strong><br/>
 <i>Mass in kg</i>
-<form action="{% if pk %}{% url 're_save_ev' pk %}{% else %}{% url 'save_ev' %}{% endif %}" method="post">
+<form action="{% if pk %}{% url 'planner2_re_save_ev' pk %}{% else %}{% url 'planner2_save_ev' %}{% endif %}" method="post">
 <table>
 {{ form.as_table }}
 </table>
@@ -24,7 +27,7 @@
 </thead>
 {% for ev in evList %}
 <tr>
-<td><a href="{% url 're_edit_ev' ev.id %}">{{ ev.user.first_name }}&nbsp;{{ ev.user.last_name }}</a></td>
+<td><a href="{% url 'planner2_re_edit_ev' ev.id %}">{{ ev.user.first_name }}&nbsp;{{ ev.user.last_name }}</a></td>
 <td style="text-align:right;">{{ ev.mass }}</tr>
 {% endfor %}
 </table>
