added map resolution to form

--- a/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
@@ -24,6 +24,11 @@
 		        </select>
 		    </td>
 		</tr>
+		<tr>
+			<td><label for="id_resolution">Map Resolution</label></td>
+			<td><input type="text" name="resolution" id="id_resolution" value="0.5"></input>
+		    </td>
+		</tr>
 		</table>
 		<input class="mybutton small" id="pextantButton"  type="submit" value="Call Sextant">
 	</form>
