--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -4,7 +4,7 @@
 <div class="sitemenu-nav-secondary">
 	<nav class="subnav">
 	<ul>
-		<li {% currentnav planner2_index %}><a href="{% url 'planner2_index' %}"> List Plans </a></li>
+		<li {% currentnav planner2_index %}><a href="{% url 'planner2_index' %}"> List {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a></li>
 		<li {% currentnav planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}><a href="{% url 'planner2_manage' %}">Manage Schedule</a></li>
 		<li {% currentnav planner2_edit_ev %}><a href="{% url 'planner2_edit_ev' %}"> EV People </a></li>
 		<!-- 
