can now pass slope to sextant

--- a/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
@@ -25,8 +25,13 @@
 		    </td>
 		</tr>
 		<tr>
-			<td><label for="id_resolution">Map Resolution</label></td>
+			<td><label for="id_resolution">Map Resolution (m)</label></td>
 			<td><input type="text" name="resolution" id="id_resolution" value="0.5"></input>
+		    </td>
+		</tr>
+		<tr>
+			<td><label for="id_slope">Max Slope</label></td>
+			<td><input type="text" name="slope" id="id_slope" value="15"></input>
 		    </td>
 		</tr>
 		</table>
