--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -46,6 +46,9 @@
 			<li {% currentnav *xgds_image* %} >
 				<a href="{% url 'xgds_image_search' %}" title="image">Image</a>
 			</li>
+			<li {% currentnav *xgds_sample* %} >
+				<a href="{% url 'xgds_sample_search' %}" title="sample">Sample</a>
+			</li>
  			<li {% currentnav *note* %}>
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
 			</li>
