--- a/apps/basaltApp/templates/xgds_sample/sampleCreate.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleCreate.html
@@ -17,6 +17,13 @@
 {% block firstPackery %}
 	<div class='item auto lockAspect' id='create_sample_from_label_num' data-isStamped="false">
 		<i class="icon-lock-open pinDiv"></i><br />
+			{% if messages %}
+			<div id="messages">
+		  		{% for message in messages %}
+		    	<p>{{ message }}</p>
+		    	{% endfor %}
+			</div>
+			{% endif %}
 		<form class="label_number_form" id="label_number_form" action="{% url 'create_sample' %}" method="post" enctype="multipart/form-data">
 			<table>
 				<tr>
