--- a/apps/basaltApp/templates/xgds_sample/sampleCreateForm.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleCreateForm.html
@@ -26,6 +26,8 @@
 
 {% block jsInit %} 
 {{ block.super }}
+
+
 {% endblock jsInit %} 
 
 {% block otherJSInit %} 
@@ -49,8 +51,16 @@
 	
 	<input type=hidden name=sampleId value="{{ sample.pk }}">
 
-	<form class="updateSample" id="updateSample" action="{% url 'update_sample' %}" method="post" enctype="multipart/form-data">
+	<form class="updateSample" id="updateSample" action="{% url 'create_sample' %}" method="post" enctype="multipart/form-data">
 		<table>
+			<tr> 
+				<th> <label for="id_label">Label number:</label> </th>
+				<td>{{ labelNum }}</td>
+			</tr>
+			<tr class="sample_name_row">
+				<th><label for="id_name">Name:</label></th>
+				<td><input id="id_name" maxlength="512" name="name" type="text" placeholder="i.e NC16B001A"/></td>
+			</tr>
 			{{ form.as_table }}
 		</table>
 		{% csrf_token %}
