really worked through time zone for scheduling plans and for display, still issues if you have multiple time zones for one deployment

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -43,7 +43,7 @@
 				<a href="{% url 'planner2_index' %}" title="{{ settings.XGDS_PLANNER2_PLAN_MONIKER }}">{{ settings.XGDS_PLANNER2_PLAN_MONIKER }}</a>
 			</li>
 			<li {% currentnav *xgds_image* %} >
-				<a href="{% url 'xgds_image_search' %}" title="image">Image</a>
+				<a href="{% url 'xgds_image_search' %}" title="photo">Photo</a>
 			</li>
 			<li {% currentnav *xgds_sample* %} >
 				<a href="{% url 'xgds_sample_search' %}" title="sample">Sample</a>
