--- a/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
@@ -6,7 +6,7 @@
 		<table>
 		<tr>
 			<td><label for="id_schedule_date">Start</label></td>
-			<td><input type="text" name="schedule_date" id="id_schedule_date" {{#if planExecution}}value="{{ planExecution.planned_start_time }}"{{/if}}</input></td>
+			<td><input type="text" name="schedule_date" id="id_schedule_date" {{#if planned_start_time}}value="{{ planned_start_time }}"{{/if}}</input></td>
 		</tr>
 		<tr>
 			<td><label for="id_flight">Flight</label></td>
