--- a/apps/basaltApp/templates/xgds_sample/sampleCreateForm.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleCreateForm.html
@@ -12,6 +12,7 @@
 
 {% block scripts %}
 {{block.super}}
+	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
 	<script type="text/javascript" src='{{ EXTERNAL_URL }}/handlebars/handlebars.min.js'></script>
     <script type="text/javascript" src="{{ STATIC_URL }}xgds_sample/js/sampleReview.js"></script>
 		<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
@@ -61,6 +62,29 @@
 				<td><input id="id_name" maxlength="512" name="name" type="text" placeholder="i.e NC16B001A"/></td>
 			</tr>
 			{{ form.as_table }}
+			<tr>
+				<th> <label for="id_region">Region:</label></th>
+				<td>
+					<select id="id_region" name="region">
+					<option value="" selected="selected">---------</option>
+					{% for region in regions_list %}
+					<option value="{{ region.shortName }}">{{ region.name }}</option>
+					{% endfor %}
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<th><label for="id_collection_time">Collection Time:</label></th>
+				<td><input id="id_collection_time" maxlength="512" name="collection_time" type="text" /> </td>
+			</tr>
+			<tr>
+				<th><label for="id_latitude">Latitude:</label></th>
+				<td><input id="id_latitude" maxlength="512" name="latitude" type="text" placeholder="latitude"/></td>
+			</tr>
+			<tr>
+				<th><label for="id_latitude">Longitude:</label></th>
+				<td><input id="id_longitude" maxlength="512" name="longitude" type="text" placeholder="longitude"/></td>
+			</tr>	
 		</table>
 		{% csrf_token %}
 		<input type="submit" value="update"/> 
