URLs changed for sample edit view

--- a/apps/basaltApp/templates/xgds_sample/sampleCreate.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleCreate.html
@@ -24,7 +24,7 @@
 		    	{% endfor %}
 			</div>
 			{% endif %}
-		<form class="label_number_form" id="label_number_form" action="{% url 'create_sample' %}" method="post" enctype="multipart/form-data">
+		<form class="label_number_form" id="label_number_form" action="{% url 'xgds_sample_edit' %}" method="post" enctype="multipart/form-data">
 			<table>
 				<tr>
 					<th><label for="id_label_number">Label Number:</label></th>
